tests/unit/elf/x32/snapshots/unit__elf__x32__test_patching__add_debug_tag.snap
---
source: tests/unit/elf/x32/test_patching.rs
expression: changed_macho.dynamic
---
Some(
    Dynamic {
        dyns: [
            Dyn {
                d_tag: "DT_RUNPATH",
                d_val: 0x57fa,
            },
            Dyn {
                d_tag: "DT_NEEDED",
                d_val: 0x7f8d,
            },
            Dyn {
                d_tag: "DT_NEEDED",
                d_val: 0x8014,
            },
            Dyn {
                d_tag: "DT_NEEDED",
                d_val: 0x7f83,
            },
            Dyn {
                d_tag: "DT_INIT",
                d_val: 0x806151c,
            },
            Dyn {
                d_tag: "DT_FINI",
                d_val: 0x80ef3fc,
            },
            Dyn {
                d_tag: "DT_HASH",
                d_val: 0x80441ec,
            },
            Dyn {
                d_tag: "DT_GNU_HASH",
                d_val: 0x8048324,
            },
            Dyn {
                d_tag: "DT_STRTAB",
                d_val: 0x8053de0,
            },
            Dyn {
                d_tag: "DT_SYMTAB",
                d_val: 0x804b970,
            },
            Dyn {
                d_tag: "DT_STRSZ",
                d_val: 0x803d,
            },
            Dyn {
                d_tag: "DT_SYMENT",
                d_val: 0x10,
            },
            Dyn {
                d_tag: "DT_DEBUG",
                d_val: 0x0,
            },
            Dyn {
                d_tag: "DT_PLTGOT",
                d_val: 0x810a4b8,
            },
            Dyn {
                d_tag: "DT_PLTRELSZ",
                d_val: 0x5f8,
            },
            Dyn {
                d_tag: "DT_PLTREL",
                d_val: 0x11,
            },
            Dyn {
                d_tag: "DT_JMPREL",
                d_val: 0x8060f24,
            },
            Dyn {
                d_tag: "DT_REL",
                d_val: 0x8060ee4,
            },
            Dyn {
                d_tag: "DT_RELSZ",
                d_val: 0x40,
            },
            Dyn {
                d_tag: "DT_RELENT",
                d_val: 0x8,
            },
            Dyn {
                d_tag: "DT_VERNEED",
                d_val: 0x8060e44,
            },
            Dyn {
                d_tag: "DT_VERNEEDNUM",
                d_val: 0x2,
            },
            Dyn {
                d_tag: "DT_VERSYM",
                d_val: 0x805fdb4,
            },
            Dyn {
                d_tag: "DT_NULL",
                d_val: 0x0,
            },
        ],
        info: DynamicInfo {
            rela: 0x0,
            relasz: 0,
            relaent: 0,
            relacount: 0,
            gnu_hash: 0x4324,
            hash: 0x1ec,
            strtab: 0xfde0,
            strsz: 32829,
            symtab: 0x7970,
            syment: 16,
            pltgot: 0xc54b8,
            pltrelsz: 1528,
            pltrel: 17,
            jmprel: 0x1cf24,
            verdef: 0x0,
            verdefnum: 0,
            verneed: 0x1ce44,
            verneednum: 2,
            versym: 0x1bdb4,
            init: 0x1d51c,
            fini: 0xab3fc,
            init_array: 0x0,
            init_arraysz: 0,
            needed_count: 3,
            flags: 0x000000 [],
            flags_1: 0x000000 [],
            soname: 0,
            textrel: false,
        },
    },
)
