tests/unit/elf/x32/snapshots/unit__elf__x32__test_patching__force_rpath.snap
---
source: tests/unit/elf/x32/test_patching.rs
expression: changed_macho.rpaths
---
[
    "path-graf",
]
