tests/unit/elf/x32/snapshots/unit__elf__x32__test_patching__remove_dt_needed.snap
---
source: tests/unit/elf/x32/test_patching.rs
expression: changed_macho.libraries
---
[
    "my_dtneed",
    "libncurses.so.5",
    "libdl.so.2",
    "libc.so.6",
]
