tests/unit/elf/x32/snapshots/unit__elf__x32__test_patching__rpath_set.snap
---
source: tests/unit/elf/x32/test_patching.rs
expression: changed_elf.runpaths
---
[
    "path_graf_path_graf_path_graf_path_graf",
]
