tests/unit/elf/x32/snapshots/unit__elf__x32__test_patching__set_interpreter.snap
---
source: tests/unit/elf/x32/test_patching.rs
expression: changed_macho.interpreter
---
Some(
    "/my/ld-linux.so.2\0",
)
