tests/unit/elf/x32/snapshots/unit__elf__x32__test_patching__set_page_size.snap
---
source: tests/unit/elf/x32/test_patching.rs
expression: changed_elf.program_headers
---
[
    ProgramHeader {
        p_type: "PT_PHDR",
        p_flags: 0x5,
        p_offset: 0x34,
        p_vaddr: 0x8044034,
        p_paddr: 0x8044034,
        p_filesz: 0x160,
        p_memsz: 0x160,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_GNU_STACK",
        p_flags: 0x6,
        p_offset: 0x0,
        p_vaddr: 0x0,
        p_paddr: 0x0,
        p_filesz: 0x0,
        p_memsz: 0x0,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_LOAD",
        p_flags: 0x6,
        p_offset: 0x0,
        p_vaddr: 0x8044000,
        p_paddr: 0x8044000,
        p_filesz: 0x17f18,
        p_memsz: 0x17f18,
        p_align: 8192,
    },
    ProgramHeader {
        p_type: "PT_INTERP",
        p_flags: 0x4,
        p_offset: 0x194,
        p_vaddr: 0x8044194,
        p_paddr: 0x8044194,
        p_filesz: 0x13,
        p_memsz: 0x13,
        p_align: 1,
    },
    ProgramHeader {
        p_type: "PT_NOTE",
        p_flags: 0x4,
        p_offset: 0x1a8,
        p_vaddr: 0x80441a8,
        p_paddr: 0x80441a8,
        p_filesz: 0x20,
        p_memsz: 0x20,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_NOTE",
        p_flags: 0x4,
        p_offset: 0x1c8,
        p_vaddr: 0x80441c8,
        p_paddr: 0x80441c8,
        p_filesz: 0x24,
        p_memsz: 0x24,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_DYNAMIC",
        p_flags: 0x6,
        p_offset: 0x17e28,
        p_vaddr: 0x805be28,
        p_paddr: 0x805be28,
        p_filesz: 0xf0,
        p_memsz: 0xf0,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_LOAD",
        p_flags: 0x6,
        p_offset: 0x19e00,
        p_vaddr: 0x805de00,
        p_paddr: 0x805de00,
        p_filesz: 0xe8,
        p_memsz: 0xe8,
        p_align: 8192,
    },
    ProgramHeader {
        p_type: "PT_LOAD",
        p_flags: 0x5,
        p_offset: 0x1bdb4,
        p_vaddr: 0x805fdb4,
        p_paddr: 0x805fdb4,
        p_filesz: 0xa960c,
        p_memsz: 0xa960c,
        p_align: 8192,
    },
    ProgramHeader {
        p_type: "PT_GNU_EH_FRAME",
        p_flags: 0x4,
        p_offset: 0xc52f8,
        p_vaddr: 0x81092f8,
        p_paddr: 0x81092f8,
        p_filesz: 0x2c,
        p_memsz: 0x2c,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_LOAD",
        p_flags: 0x6,
        p_offset: 0xc53c0,
        p_vaddr: 0x810a3c0,
        p_paddr: 0x810a3c0,
        p_filesz: 0x4790,
        p_memsz: 0x96ac,
        p_align: 8192,
    },
]
